Fix empty stack exception